--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
       pageable:
         default-page-size: 20 # 기본 페이지 사이즈 (20)
         max-page-size: 2000 # 최대 페이지 사이즈 (300)
+#        one-indexed-parameters: true # 넘겨받은 page 파라미터를 -1씩 줄인다. (Page객체의 페이지정보와의 불일치가 발생한다.) 
 
 #    show_sql: true
 #    format_sql: true
